remember to include ShowDependencyGraph in testconfig

--- a/db/testhodconfig.yaml
+++ b/db/testhodconfig.yaml
@@ -1,5 +1,6 @@
 ReloadBrick: false
 ShowQueryPlan: false
+ShowDependencyGraph: false
 ShowQueryPlanLatencies: false
 ShowOperationLatencies: false
 ShowQueryLatencies: false
