fix default brick class file paths

--- a/hodconfig.yaml
+++ b/hodconfig.yaml
@@ -9,10 +9,10 @@
 #DBPath: _hoddb
 
 # the path to the TTL file containing Brick relationships
-#BrickFrameTTL: "BrickFrame.ttl"
+#BrickFrameTTL: "$GOPATH/src/github.com/gtfierro/hod/BrickFrame.ttl"
 
 # the path to the TTL file containing Brick classes
-#BrickClassTTL: "Brick.ttl"
+#BrickClassTTL: "$GOPATH/src/github.com/gtfierro/hod/Brick.ttl"
 
 # whether or not to reload the Brick database files
 #ReloadBrick: true
