add config options for TLS, listening on specific addresses

--- a/hodconfig.yaml
+++ b/hodconfig.yaml
@@ -51,7 +51,7 @@
 #UseIPv6: false
 
 # Whether or not to serve on localhost. If false, serves on a public interface
-#Localhost: true
+#ListenAddress: 0.0.0.0
 #
 # Path to the server directory of hod, which contains the necessary HTML files
 #StaticPath: $GOPATH/src/github.com/gtfierro/hod/server
