more correcter expand tuples. Should be easier to understand too

--- a/db/testhodconfig.yaml
+++ b/db/testhodconfig.yaml
@@ -5,3 +5,4 @@ ShowDependencyGraph: false
 ShowQueryPlanLatencies: false
 ShowOperationLatencies: false
 ShowQueryLatencies: false
+LogLevel: Critical
