--- a/hodconfig.yaml
+++ b/hodconfig.yaml
@@ -40,10 +40,10 @@
 #ShowNamespaces: true
 
 # Show the built dependency graph of query terms
-#ShowDependencyGraph: false
+ShowDependencyGraph: true
 
 # Show the set of operations in the query plan
-#ShowQueryPlan: false
+ShowQueryPlan: true
 
 # Show the latencies of creating the query plan
 #ShowQueryPlanLatencies: false
