--- a/hodconfig.yaml
+++ b/hodconfig.yaml
@@ -40,10 +40,10 @@
 #ShowNamespaces: true
 
 # Show the built dependency graph of query terms
-ShowDependencyGraph: true
+#ShowDependencyGraph: false
 
 # Show the set of operations in the query plan
-ShowQueryPlan: true
+#ShowQueryPlan: false
 
 # Show the latencies of creating the query plan
 #ShowQueryPlanLatencies: false
