adjust deployment defaults

--- a/container/hodconfig.yaml
+++ b/container/hodconfig.yaml
@@ -17,7 +17,7 @@ DisableQueryCache: true
 # Enable HTTP server
 EnableHTTP: true
 # Enable BOSSWAVE server
-EnableBOSSWAVE: true
+EnableBOSSWAVE: false
 
 ####
 # configuration for verbosity during operation
