--- a/kubernetes/deployhod.yaml
+++ b/kubernetes/deployhod.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1beta2
+apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
     name: hoddb
@@ -27,7 +27,7 @@ spec:
                 - name: hodconfig
                   hostPath:
                     path: << config directory >>
-                    type: Directory
+#                    type: Directory
 ---
 kind: Service
 apiVersion: v1
