use the right CGO_FLAGS_ALLOW on the benchmark makefiles

--- a/db/Makefile
+++ b/db/Makefile
@@ -8,15 +8,15 @@ cover:
 	git checkout test_databases
 	go tool cover -html=coverage.out -o=coverage.html
 bench:
-	- go test -v -test.bench=BenchmarkQuery -test.run=xyzxyzxyz
+	- CGO_CFLAGS_ALLOW=.*/github.com/gtfierro/hod/turtle go test -v -test.bench=BenchmarkQuery -test.run=xyzxyzxyz
 	rm -rf test_databases
 	git checkout test_databases
 bench-cpu:
-	- go test -v -test.bench=BenchmarkQuery -test.run=xyzxyzxyz -cpuprofile=cpu.out
+	- CGO_CFLAGS_ALLOW=.*/github.com/gtfierro/hod/turtle go test -v -test.bench=BenchmarkQuery -test.run=xyzxyzxyz -cpuprofile=cpu.out
 	rm -rf test_databases
 	git checkout test_databases
 bench-mem:
-	- go test -v -test.bench=BenchmarkQuery -test.run=xyzxyzxyz -memprofile=mem.out
+	- CGO_CFLAGS_ALLOW=.*/github.com/gtfierro/hod/turtle go test -v -test.bench=BenchmarkQuery -test.run=xyzxyzxyz -memprofile=mem.out
 	rm -rf test_databases
 	git checkout test_databases
 clean:
