add CGO_FLAGS_ALLOW to make test

--- a/db/Makefile
+++ b/db/Makefile
@@ -1,5 +1,5 @@
 test:
-	- go test -v
+	- CGO_CFLAGS_ALLOW=.*/github.com/gtfierro/hod/turtle go test -v
 	rm -rf test_databases
 	git checkout test_databases
 cover:
