make test databases easier to use, less error-prone, switch to using HodDB frontend for tests

--- a/db/testhodconfig.yaml
+++ b/db/testhodconfig.yaml
@@ -1,3 +1,9 @@
+DBPath: _testhoddb
+Buildings:
+    soda: testbuildings/berkeley.ttl
+    test: testbuildings/example.ttl
+BrickClassTTL: "testbuildings/Brick.ttl"
+BrickFrameTTL: "testbuildings/BrickFrame.ttl"
 ReloadBrick: false
 DisableQueryCache: true
 ShowNamespaces: false
@@ -7,3 +13,5 @@ ShowQueryPlanLatencies: false
 ShowOperationLatencies: false
 ShowQueryLatencies: false
 LogLevel: Critical
+EnableBOSSWAVE: false
+EnableHTTP: false
