separate tests out a bit

--- a/db/testhodconfig.yaml
+++ b/db/testhodconfig.yaml
@@ -5,6 +5,7 @@ Buildings:
 Ontologies:
     - "testbuildings/BrickFrame.ttl"
     - "testbuildings/Brick.ttl"
+StorageEngine: "badger"
 ReloadOntologies: false
 DisableQueryCache: true
 ShowNamespaces: false
