--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,7 +1,7 @@
-FROM ubuntu:xenial
+FROM ubuntu:bionic
 MAINTAINER Gabe Fierro <gtfierro@eecs.berkeley.edu>
 
-RUN apt-get -y update && apt-get install -y git libraptor2-dev libssl-dev
+RUN apt-get -y update && apt-get install -y git libraptor2-dev libssl-dev libssl1.1
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 ADD hod /bin/hod
